--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -522,3 +522,13 @@ table td {
     vertical-align: top;
     word-break: break-all;
 }
+
+footer {
+    text-align: center;
+    padding: 20px 0;             /* 20px top and bottom, 0px left and right */
+    background-color: #f4f4f4;  /* Light gray background */
+    color: #333;                /* Darker text color for contrast */
+    border-top: 1px solid #e0e0e0; /* Optional: Adds a border on top */
+    font-family: Arial, sans-serif; /* Optional: Changes the font */
+    font-size: 0.9em;           /* Optional: Adjusts the font size */
+}
